--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,29 @@
       </div>
       <div class="right-column">
         <section id="modsSection" class="config-section">
-          <h2>Mods (模组)</h2>
-          <div class="list-controls">
-            <button class="add-button" data-type="Mods">添加</button>
+          <div class="section-header">
+            <h2>Mods (模组)</h2>
+            <button class="collapse-button" data-target="modsContent">▼</button>
           </div>
-          <div id="modsList" class="list-editor"></div>
+          <div id="modsContent" class="section-content">
+            <div class="list-controls">
+              <button class="add-button" data-type="Mods">添加</button>
+            </div>
+            <div id="modsList" class="list-editor"></div>
+          </div>
         </section>
 
         <section id="workshopItemsSection" class="config-section">
-          <h2>WorkshopItems (创意工坊)</h2>
-          <div class="list-controls">
-            <button class="add-button" data-type="WorkshopItems">添加</button>
+          <div class="section-header">
+            <h2>WorkshopItems (创意工坊)</h2>
+            <button class="collapse-button" data-target="workshopItemsContent">▼</button>
           </div>
-          <div id="workshopItemsList" class="list-editor"></div>
+          <div id="workshopItemsContent" class="section-content">
+            <div class="list-controls">
+              <button class="add-button" data-type="WorkshopItems">添加</button>
+            </div>
+            <div id="workshopItemsList" class="list-editor"></div>
+          </div>
         </section>
       </div>
     </div>
