move map to listitems

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,19 @@
             <div id="workshopItemsList" class="list-editor"></div>
           </div>
         </section>
+
+        <section id="mapSection" class="config-section">
+          <div class="section-header">
+            <h2>Map (地图)</h2>
+            <button class="collapse-button" data-target="mapContent">▼</button>
+          </div>
+          <div id="mapContent" class="section-content">
+            <div class="list-controls">
+              <button class="add-button" data-type="Map">添加</button>
+            </div>
+            <div id="mapList" class="list-editor"></div>
+          </div>
+        </section>
       </div>
     </div>
   </main>
