--- a/public/index.html
+++ b/public/index.html
@@ -16,52 +16,80 @@
   </header>
 
   <main>
-    <div class="main-content">
-      <div class="left-column">
-        <section id="normalItems" class="config-section">
-          <h2>普通配置项</h2>
-          <div id="normalItemsList" class="items-list"></div>
-        </section>
+    <div class="tab-navigation">
+      <button class="tab-button active" data-tab="config">配置管理</button>
+      <button class="tab-button" data-tab="paths">路径设置</button>
+    </div>
+
+    <div class="tab-content active" id="config-tab">
+      <div class="main-content">
+        <div class="left-column">
+          <section id="normalItems" class="config-section">
+            <h2>普通配置项</h2>
+            <div id="normalItemsList" class="items-list"></div>
+          </section>
+        </div>
+        <div class="right-column">
+          <section id="modsSection" class="config-section">
+            <div class="section-header">
+              <h2>Mods (模组)</h2>
+              <button class="collapse-button" data-target="modsContent">▼</button>
+            </div>
+            <div id="modsContent" class="section-content">
+              <div class="list-controls">
+                <button class="add-button" data-type="Mods">添加</button>
+              </div>
+              <div id="modsList" class="list-editor"></div>
+            </div>
+          </section>
+
+          <section id="workshopItemsSection" class="config-section">
+            <div class="section-header">
+              <h2>WorkshopItems (创意工坊)</h2>
+              <button class="collapse-button" data-target="workshopItemsContent">▼</button>
+            </div>
+            <div id="workshopItemsContent" class="section-content">
+              <div class="list-controls">
+                <button class="add-button" data-type="WorkshopItems">添加</button>
+              </div>
+              <div id="workshopItemsList" class="list-editor"></div>
+            </div>
+          </section>
+
+          <section id="mapSection" class="config-section">
+            <div class="section-header">
+              <h2>Map (地图)</h2>
+              <button class="collapse-button" data-target="mapContent">▼</button>
+            </div>
+            <div id="mapContent" class="section-content">
+              <div class="list-controls">
+                <button class="add-button" data-type="Map">添加</button>
+              </div>
+              <div id="mapList" class="list-editor"></div>
+            </div>
+          </section>
+        </div>
       </div>
-      <div class="right-column">
-        <section id="modsSection" class="config-section">
-          <div class="section-header">
-            <h2>Mods (模组)</h2>
-            <button class="collapse-button" data-target="modsContent">▼</button>
-          </div>
-          <div id="modsContent" class="section-content">
-            <div class="list-controls">
-              <button class="add-button" data-type="Mods">添加</button>
-            </div>
-            <div id="modsList" class="list-editor"></div>
-          </div>
-        </section>
+    </div>
 
-        <section id="workshopItemsSection" class="config-section">
-          <div class="section-header">
-            <h2>WorkshopItems (创意工坊)</h2>
-            <button class="collapse-button" data-target="workshopItemsContent">▼</button>
+    <div class="tab-content" id="paths-tab">
+      <div class="config-section">
+        <h2>路径设置</h2>
+        <div class="paths-content">
+          <div class="path-item">
+            <div class="path-label">Workshop 文件夹路径</div>
+            <div class="path-description">创意工坊模组的存储路径，用于自动管理模组</div>
+            <input type="text" id="workshopPath" class="path-input" placeholder="例如: C:/Steam/steamapps/workshop/content/108600">
           </div>
-          <div id="workshopItemsContent" class="section-content">
-            <div class="list-controls">
-              <button class="add-button" data-type="WorkshopItems">添加</button>
-            </div>
-            <div id="workshopItemsList" class="list-editor"></div>
+          <div class="path-item">
+            <div class="path-label">INI 文件路径</div>
+            <div class="path-description">服务器配置文件的完整路径，用于读取和写入配置</div>
+            <input type="text" id="iniFilePath" class="path-input" placeholder="例如: C:/Servers/PZ/server.ini">
           </div>
-        </section>
-
-        <section id="mapSection" class="config-section">
-          <div class="section-header">
-            <h2>Map (地图)</h2>
-            <button class="collapse-button" data-target="mapContent">▼</button>
+          <div class="path-actions">
+            <button id="savePathsButton" class="save-button">保存路径设置</button>
           </div>
-          <div id="mapContent" class="section-content">
-            <div class="list-controls">
-              <button class="add-button" data-type="Map">添加</button>
-            </div>
-            <div id="mapList" class="list-editor"></div>
-          </div>
-        </section>
+        </div>
       </div>
     </div>
   </main>
