add index and input panel

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,26 @@
 
   <footer id="statusMessage" class="status-message"></footer>
 
+  <!-- 添加项目对话框 -->
+  <div id="addItemDialog" class="dialog-overlay">
+    <div class="dialog-content">
+      <div class="dialog-header">
+        <h3 id="dialogTitle">添加项目</h3>
+        <button id="closeDialog" class="dialog-close">&times;</button>
+      </div>
+      <div class="dialog-body">
+        <div class="dialog-input-group">
+          <label for="dialogInput" id="dialogLabel">输入内容</label>
+          <input type="text" id="dialogInput" class="dialog-input" placeholder="请输入内容">
+        </div>
+      </div>
+      <div class="dialog-footer">
+        <button id="cancelDialog" class="dialog-button cancel">取消</button>
+        <button id="confirmDialog" class="dialog-button confirm">确认</button>
+      </div>
+    </div>
+  </div>
+
   <script src="app.js"></script>
 </body>
 </html>
