--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,6 @@
     </div>
   </main>
 
-  <footer id="statusMessage" class="status-message"></footer>
-
   <!-- 添加项目对话框 -->
   <div id="addItemDialog" class="dialog-overlay">
     <div class="dialog-content">
@@ -116,6 +114,9 @@
       </div>
     </div>
   </div>
+
+  <!-- Toast提示 -->
+  <div id="toastContainer" class="toast-container"></div>
 
   <script src="app.js"></script>
 </body>
