--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
       <span id="configPath" class="config-path"></span>
       <span id="connectionStatus" class="status-indicator"></span>
     </div>
-    <button id="saveButton" class="save-button">保存</button>
+    <div class="header-right">
+      <a href="https://github.com/g0g5/pzserver-config-panel" target="_blank" rel="noopener noreferrer" class="github-button">GitHub</a>
+      <button id="saveButton" class="save-button">保存</button>
+    </div>
   </header>
 
   <main>
