--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,96 @@
       <span id="configPath" class="config-path"></span>
       <span id="connectionStatus" class="status-indicator"></span>
     </div>
+    <div class="header-center">
+      <span id="singleActiveModeIndicator" class="mode-indicator">
+        <span class="mode-dot"></span>
+        单实例运行模式
+      </span>
+    </div>
     <div class="header-right">
       <a href="https://github.com/g0g5/pzserver-config-panel" target="_blank" rel="noopener noreferrer" class="github-button">GitHub</a>
-      <button id="saveButton" class="save-button">保存</button>
+      <button id="saveButton" class="save-button">保存配置</button>
     </div>
   </header>
 
   <main>
     <div class="tab-navigation">
-      <button class="tab-button active" data-tab="config">配置管理</button>
+      <button class="tab-button active" data-tab="servers">实例管理</button>
+      <button class="tab-button" data-tab="config">配置管理</button>
       <button class="tab-button" data-tab="paths">路径设置</button>
+    </div>
+
+    <div class="tab-content active" id="servers-tab">
+      <div class="servers-layout">
+        <!-- 实例列表 -->
+        <section class="servers-list-section">
+          <div class="section-header">
+            <h2>服务器实例</h2>
+            <button id="addServerBtn" class="add-button">添加实例</button>
+          </div>
+          <div id="serversList" class="servers-list"></div>
+        </section>
+
+        <!-- 实例控制区 -->
+        <section class="server-control-section">
+          <div class="control-panel" id="controlPanel">
+            <div class="control-header">
+              <h3 id="selectedServerName">未选择实例</h3>
+              <span id="selectedServerStatus" class="server-status-badge">--</span>
+            </div>
+            
+            <div class="control-actions">
+              <button id="startServerBtn" class="control-btn start" disabled>
+                <span class="btn-icon">▶</span>
+                启动服务器
+              </button>
+              <button id="stopServerBtn" class="control-btn stop" disabled>
+                <span class="btn-icon">■</span>
+                停止服务器
+              </button>
+            </div>
+
+            <div class="control-info" id="controlInfo" style="display: none;">
+              <div class="info-item">
+                <span class="info-label">PID:</span>
+                <span id="serverPid" class="info-value">--</span>
+              </div>
+              <div class="info-item">
+                <span class="info-label">启动时间:</span>
+                <span id="serverStartedAt" class="info-value">--</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- 终端区域 -->
+          <div class="terminal-section">
+            <div class="terminal-header">
+              <h3>终端日志</h3>
+              <div class="terminal-controls">
+                <label class="auto-scroll-toggle">
+                  <input type="checkbox" id="autoScrollToggle" checked>
+                  <span>自动滚动</span>
+                </label>
+                <button id="clearTerminalBtn" class="terminal-btn">清空</button>
+                <button id="reconnectTerminalBtn" class="terminal-btn">重连</button>
+              </div>
+            </div>
+            <div id="terminalOutput" class="terminal-output"></div>
+            <div class="terminal-input-area">
+              <div class="terminal-input-wrapper">
+                <textarea 
+                  id="terminalInput" 
+                  class="terminal-input" 
+                  placeholder="输入命令（支持多行，Enter发送，Shift+Enter换行）..."
+                  rows="2"
+                ></textarea>
+                <div id="commandSuggestions" class="command-suggestions"></div>
+              </div>
+              <button id="sendCommandBtn" class="send-command-btn" disabled>发送</button>
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
 
     <div class="tab-content active" id="config-tab">
@@ -78,20 +158,25 @@
 
     <div class="tab-content" id="paths-tab">
       <div class="config-section">
-        <h2>路径设置</h2>
+        <h2>全局路径设置</h2>
         <div class="paths-content">
           <div class="path-item">
             <div class="path-label">Workshop 文件夹路径</div>
             <div class="path-description">创意工坊模组的存储路径，用于自动管理模组</div>
-            <input type="text" id="workshopPath" class="path-input" placeholder="例如: C:/Steam/steamapps/workshop/content/108600">
+            <input type="text" id="workshopPath" class="path-input" placeholder="例如: /home/user/Steam/steamapps/workshop/content/108600">
           </div>
           <div class="path-item">
-            <div class="path-label">INI 文件路径</div>
-            <div class="path-description">服务器配置文件的完整路径，用于读取和写入配置</div>
-            <input type="text" id="iniFilePath" class="path-input" placeholder="例如: C:/Servers/PZ/server.ini">
+            <div class="path-label">优雅停止超时 (毫秒)</div>
+            <div class="path-description">发送停止命令后等待进程退出的最大时间</div>
+            <input type="number" id="stopGraceTimeout" class="path-input" value="30000">
+          </div>
+          <div class="path-item">
+            <div class="path-label">强制终止超时 (毫秒)</div>
+            <div class="path-description">SIGTERM 后等待的最大时间，超时则发送 SIGKILL</div>
+            <input type="number" id="forceKillTimeout" class="path-input" value="10000">
           </div>
           <div class="path-actions">
-            <button id="savePathsButton" class="save-button">保存路径设置</button>
+            <button id="savePathsButton" class="save-button">保存全局设置</button>
           </div>
         </div>
       </div>
@@ -114,6 +199,42 @@
       <div class="dialog-footer">
         <button id="cancelDialog" class="dialog-button cancel">取消</button>
         <button id="confirmDialog" class="dialog-button confirm">确认</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- 添加/编辑服务器实例对话框 -->
+  <div id="serverDialog" class="dialog-overlay">
+    <div class="dialog-content dialog-large">
+      <div class="dialog-header">
+        <h3 id="serverDialogTitle">添加服务器实例</h3>
+        <button id="closeServerDialog" class="dialog-close">&times;</button>
+      </div>
+      <div class="dialog-body">
+        <input type="hidden" id="serverDialogId" value="">
+        <div class="dialog-input-group">
+          <label for="serverNameInput">实例名称</label>
+          <input type="text" id="serverNameInput" class="dialog-input" placeholder="例如: 主服务器">
+        </div>
+        <div class="dialog-input-group">
+          <label for="serverIniPathInput">INI 配置文件路径</label>
+          <input type="text" id="serverIniPathInput" class="dialog-input" placeholder="例如: /path/to/server.ini">
+        </div>
+        <div class="dialog-input-group">
+          <label for="serverStartCmdInput">启动命令</label>
+          <input type="text" id="serverStartCmdInput" class="dialog-input" placeholder="例如: /path/to/start-server.sh">
+        </div>
+        <div class="dialog-input-group">
+          <label for="serverStopCmdsInput">停止命令列表（每行一个）</label>
+          <textarea id="serverStopCmdsInput" class="dialog-textarea" rows="4" placeholder="save&#10;quit"></textarea>
+        </div>
+      </div>
+      <div class="dialog-footer">
+        <button id="deleteServerBtn" class="dialog-button delete" style="display: none;">删除</button>
+        <div class="dialog-footer-right">
+          <button id="cancelServerDialog" class="dialog-button cancel">取消</button>
+          <button id="confirmServerDialog" class="dialog-button confirm">保存</button>
+        </div>
       </div>
     </div>
   </div>
